samples/_failures_safe/1761097311_05a744_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_44b887b9.c: In function ‘main’:
./samples/SAFE/__tmp_44b887b9.c:164: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_44b887b9.c:163:14: note: to match this ‘(’
  163 |     if (fgets(input, sizeof(input), stdin
      |              ^
./samples/SAFE/__tmp_44b887b9.c:163:5: error: expected declaration or statement at end of input
  163 |     if (fgets(input, sizeof(input), stdin
      |     ^~
